@@ -1,0 +1,4 @@
+#!/usr/bin/make -f
+
+dh:
+	dh $@ --with=systemd
