@@ -4,6 +4,8 @@ lintian-brush (0.57) UNRELEASED; urgency=medium
   * Add fixer for misspelling-in-bug-closes.
   * Add some initial code for cleaning up unused lintian overrides.
   * Drop the no-dh-sequencer fixer.
+  * Drop unnecessary --with=systemd if debhelper 10 is in use. Closes:
+    #949818
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 12 Jan 2020 16:09:28 +0000
 
